changed footer icons

--- a/src/index.html
+++ b/src/index.html
@@ -487,9 +487,9 @@
                 </address>
                 <a href="tel:84999228974" class="footer__number">8 (499) 922-89-74</a>
                 <div class="footer__socials">
-                    <a href="" class="footer__icons"><span class="icon-facebook-f"></span></a>
-                    <a href="" class="footer__icons"><span class="icon-instagram"></span></a>
-                    <a href="" class="footer__icons"><span class="icon-pinterest-p"></span></a>
+                    <div class="footer__icons"><a href="" class=""><img src="icons/facebook.svg" alt=""></a></div>
+                    <div class="footer__icons"><a href="" class=""><img src="icons/instagram.svg" alt=""></a></div>
+                    <div class="footer__icons"><a href="" class=""><img src="icons/pinterest.svg" alt=""></a></div>
                 </div>
             </div>
         </footer>
