fixed catalog item link bug

--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
                             <div class="item__descr">Мы работаем для того, <br> чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
                         </div>
                         <div class="advantages__item">
-                            <img src="icons/shoe.svg" alt="shoe icon">
+                            <img src="icons/shoe.svg" alt="shoe-icon">
                             <div class="item__header">Учим бегать</div>
-                            <div class="item__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#" class="item__link">I LOVE RUNNING</a>.</div>
+                            <div class="item__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#" class="">I LOVE RUNNING</a>.</div>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                                     <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                     <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 </ul>
-                                <a href="" class="item__info_return">НАЗАД</a>
+                                <a href="#" class="item__info_return">НАЗАД</a>
                             </div>
                         </div>
                         <hr>
@@ -154,7 +154,7 @@
                                     <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                     <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 </ul>
-                                <a href="" class="item__info_return">НАЗАД</a>
+                                <a href="#" class="item__info_return">НАЗАД</a>
                             </div>
                         </div>
                         <hr>
@@ -181,7 +181,7 @@
                                     <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                     <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 </ul>
-                                <a href="" class="item__info_return">НАЗАД</a>
+                                <a href="#" class="item__info_return">НАЗАД</a>
                             </div>
                         </div>
                         <hr>
@@ -208,7 +208,7 @@
                                     <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                     <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 </ul>
-                                <a href="" class="item__info_return">НАЗАД</a>
+                                <a href="#" class="item__info_return">НАЗАД</a>
                             </div>
                         </div>
                         <hr>
@@ -235,7 +235,7 @@
                                     <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                     <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 </ul>
-                                <a href="" class="item__info_return">НАЗАД</a>
+                                <a href="#" class="item__info_return">НАЗАД</a>
                             </div>
                         </div>
                         <hr>
@@ -262,7 +262,7 @@
                                     <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                     <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 </ul>
-                                <a href="" class="item__info_return">НАЗАД</a>
+                                <a href="#" class="item__info_return">НАЗАД</a>
                             </div>
                         </div>
                         <hr>
