--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="header-phone">
                     <a href="tel:+74999228974" class="header-phone__number">+7 (499) 922-89-74</a>
-                    <button class="header-phone__cta">заказать звонок</button>
+                    <button data-module="consultation" class="header-phone__cta">заказать звонок</button>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                                 <div class="hero__icon_descr">Ответим <br> на все вопросы</div>
                             </div>
                         </div>
-                        <div class="hero__btn">заказать кОНСУЛЬТАЦИЮ</div>
+                        <button data-module="consultation" class="hero__btn">заказать кОНСУЛЬТАЦИЮ</button>
                         <div class="hero__link">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a> </div>
                     </div>
                 </div>
@@ -493,6 +493,52 @@
                 </div>
             </div>
         </footer>
+
+        <section class="overlay">
+            <div class="modal" id="consultation" >
+                <div class="modal__close-icon">&times;</div>
+                <div class="modal__title">
+                    Просто заполните форму заявки
+                </div>
+                <div class="modal__text">
+                    и мы перезвоним вам в течении 10 минут
+                </div>
+                <form action="" class="modal__form">
+                    <input type="text" name="name" required placeholder="Ваше имя">
+                    <input type="phone" name="phone" required placeholder="Ваш телефон">
+                    <input type="email" name="email" required placeholder="Ваш E-mail">
+                </form>
+                <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
+            </div>
+
+            <div class="modal" id="order" >
+                <div class="modal__close-icon">&times;</div>
+                <div class="modal__title">
+                    Ваш заказ:
+                </div>
+                <div class="modal__text">
+                    
+                </div>
+                <form action="" class="modal__form">
+                    <input type="text" name="name" required placeholder="Ваше имя">
+                    <input type="phone" name="phone" required placeholder="Ваш телефон">
+                    <input type="email" name="email" required placeholder="Ваш E-mail">
+                </form>
+                <button class="consultation__btn">Купить</button>
+            </div>
+
+            <div class="modal modal_thanks" id="thanks">
+                <div class="modal__close-icon">&times;</div>
+                <div class="modal__title">
+                    Спасибо за вашу заявку!
+                </div>
+                <div class="modal__text">
+                    Наш менеджер свяжется с вами <br>в ближайшее время!
+                </div>
+            </div>
+
+        </section>
+
         <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="js/slick.js"></script>
