added form validation

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <button data-module="consultation" class="hero__btn">заказать кОНСУЛЬТАЦИЮ</button>
-                        <div class="hero__link">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a> </div>
+                        <div class="hero__link">или <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a> </div>
                     </div>
                 </div>
         </section> 
@@ -85,11 +85,11 @@
                         Просто заполните форму заявки <br>и мы перезвоним вам в течение 10 минут
                     </div>
                     <form action="" class="consultation__form">
-                        <input type="text" name="name" required placeholder="Ваше имя">
-                        <input type="phone" name="phone" required placeholder="Ваш телефон">
-                        <input type="email" name="email" required placeholder="Ваш E-mail">
+                        <input type="text" name="name" placeholder="Ваше имя">
+                        <input type="phone" name="phone" placeholder="Ваш телефон">
+                        <input type="email" name="email" placeholder="Ваш E-mail">
+                        <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
                     </form>
-                    <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
                 </div>
         </section>
         <section class="carousel">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalog">
+        <section class="catalog" id="catalog" >
             <div class="container">
                 <div class="catalog__title">
                     Каталог пульсометров
@@ -504,11 +504,11 @@
                     и мы перезвоним вам в течении 10 минут
                 </div>
                 <form action="" class="modal__form">
-                    <input type="text" name="name" required placeholder="Ваше имя">
-                    <input type="phone" name="phone" required placeholder="Ваш телефон">
-                    <input type="email" name="email" required placeholder="Ваш E-mail">
+                    <input type="text" name="name" placeholder="Ваше имя">
+                    <input type="phone" name="phone" placeholder="Ваш телефон">
+                    <input type="email" name="email" placeholder="Ваш E-mail">
+                    <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
                 </form>
-                <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
             </div>
 
             <div class="modal" id="order" >
@@ -520,11 +520,11 @@
                     
                 </div>
                 <form action="" class="modal__form">
-                    <input type="text" name="name" required placeholder="Ваше имя">
-                    <input type="phone" name="phone" required placeholder="Ваш телефон">
-                    <input type="email" name="email" required placeholder="Ваш E-mail">
+                    <input type="text" name="name" placeholder="Ваше имя">
+                    <input name="phone" placeholder="Ваш телефон">
+                    <input type="email" name="email" placeholder="Ваш E-mail">
+                    <button class="consultation__btn">Купить</button>
                 </form>
-                <button class="consultation__btn">Купить</button>
             </div>
 
             <div class="modal modal_thanks" id="thanks">
@@ -542,6 +542,7 @@
         <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="js/slick.js"></script>
+        <script src="js/jquery.validate.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
