added form sent to mail function

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
                     </div>
                     <form action="" class="consultation__form">
                         <input type="text" name="name" placeholder="Ваше имя">
-                        <input type="phone" name="phone" placeholder="Ваш телефон">
+                        <input name="phone" placeholder="Ваш телефон">
                         <input type="email" name="email" placeholder="Ваш E-mail">
                         <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
                     </form>
@@ -505,7 +505,7 @@
                 </div>
                 <form action="" class="modal__form">
                     <input type="text" name="name" placeholder="Ваше имя">
-                    <input type="phone" name="phone" placeholder="Ваш телефон">
+                    <input name="phone" placeholder="Ваш телефон">
                     <input type="email" name="email" placeholder="Ваш E-mail">
                     <button class="consultation__btn">заказать кОНСУЛЬТАЦИЮ</button>
                 </form>
@@ -543,6 +543,7 @@
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="js/slick.js"></script>
         <script src="js/jquery.validate.min.js"></script>
+        <script src="js/jquery.maskedinput.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
