--- a/src/index.html
+++ b/src/index.html
@@ -543,6 +543,7 @@
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="js/slick.js"></script>
         <script src="js/jquery.validate.min.js"></script>
+        <script src="js/jquery.maskedinput.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
