added page scroll to up

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <body>
-        <section class="hero">
+        <section id="pageup" class="hero">
                 <div class="container">
                     <div class="hero__wrapper">
                         <h1 class="hero__header">Подбор пульсометра</h1>
@@ -536,8 +536,11 @@
                     Наш менеджер свяжется с вами <br>в ближайшее время!
                 </div>
             </div>
-
         </section>
+
+        <a href="#pageup" class="page-up">
+            <img src="icons/chevron-up.png" alt="">
+        </a>
 
         <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
